GJTC5-5 capitalized badge in job listing

--- a/css/tooplate-gotto-job.css
+++ b/css/tooplate-gotto-job.css
@@ -704,6 +704,7 @@ nav[aria-label="breadcrumb"] {
   margin-left: 5px;
   padding: 8px 12px;
   padding-bottom: 6px;
+  text-transform: uppercase;
 }
 
 .badge-level {
